--- a/README
+++ b/README
@@ -1,1 +1,21 @@
-TODO: write readme
+Eyecube is a Minecraft©-inspired game for Linux terminals.
+It is not even an alpha version for now, and there is lots of work to do.
+
+It uses neither GUI nor CLI, it is based on text, and without ASCII- and ANSI-art.
+It is written in C with ncurses and pthread libraries.
+
+
+This file is part of Eyecube.
+
+Eyecube is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+Eyecube is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with Eyecube. If not, see <http://www.gnu.org/licenses/>.
