--- a/README
+++ b/README
@@ -1,10 +1,10 @@
 Eyecube is a Minecraft©-inspired game for Linux terminals.
 
-It uses neither GUI nor CLI, it is based on text, and without ASCII- and ANSI-art.
+It uses text graphics.
 It is written in C with ncurses and pthread libraries.
 
 It is not even an alpha version for now, and there is lot of work to do.
-This program is an interface experiment, it will try to be a prototype, proof of concept.
+This program is an interface experiment.
 
 Advices are welcome.
 
