--- a/README
+++ b/README
@@ -8,7 +8,7 @@ This program is an interface experiment.
 
 Advices are welcome.
 
-i386 version might be older than amd64 one.
+i386 version might be older than one for amd64.
 
 Run notes:
 directory 'map' should exist in directory with executable
@@ -20,19 +20,17 @@ gcc -lncurses -pthread
 Debug notes:
 ./Eyecube-*.bin 2>log
 
-Items table
-                 Armour  Active  Passable  Stackable  Transparent
-0. Air           no      no      yes       no         yes
-1. Grass         no      no      no        no         no
-2. Stone         no      no      no        yes        no
-3. Player*       no      no      no        no         no
-4. Chiken        no      animal  no        no         no
-5. Fire          no      no      no        no         no
-6. Steel helmet  helmet  no      no        no         no
-7. Chest         no      chest   no        no         no
-8. Heap          no      chest   no        no         no
-
-*Player is not used, number is reserved.
+Items:
+0. Air: passable, transparent. Default block.
+1. Grass
+2. Stone
+3. Reserved for player. Isn't used.
+4. Chiken: living walking chiken. Makes sounds. Burns in a fire(5).
+5. Fire. Burns things as chikens(4) and heaps(8).
+6. Steel helmet: unstackable. Used as a helmet.
+7. Chest. Can contain up to 30 items. Collects items falling on it.
+8. Heap. Can contain up to 30 items. Collects items falling on it. Dissapears after 24 game hours.
+9. Clock: unstackable. If there is a clock in an inventory, exact time is shown instead of part of a day.
 
 This file is part of Eyecube.
 
