--- a/README
+++ b/README
@@ -1,10 +1,12 @@
-Eyecube is a Minecraft©-inspired game for Linux terminals.
+Eyecube is a sandbox game for Linux terminals.
 
 It uses text graphics.
 It is written in C with ncurses and pthread libraries.
 
 It is not even an alpha version for now, and there is lot of work to do.
 This program is an interface experiment.
+
+Some screenshots are available here: https://picasaweb.google.com/mmaulwurff/Eyecube?authuser=0&feat=directlink
 
 Advices are welcome.
 
@@ -25,14 +27,16 @@ Items:
 1. Grass
 2. Stone
 3. Reserved for player. Isn't used.
-4. Chiken: living walking chiken. Makes sounds. Burns in a fire(5).
-5. Fire. Burns things as chikens(4) and heaps(8).
+4. Chicken: living walking chiken. Makes sounds. Burns in a fire(5).
+5. Fire. Burns things as chickens(4) and heaps(8).
 6. Steel helmet: unstackable. Used as a helmet.
 7. Chest. Can contain up to 30 items. Collects items falling on it.
 8. Heap. Can contain up to 30 items. Collects items falling on it. Dissapears after 24 game hours.
 9. Clock: unstackable. If there is a clock in an inventory, exact time is shown instead of part of a day.
+10.Compass: unstackable. If there is a compass in an inventory, direction is shown.
 
-This file is part of Eyecube.
+Copyright (C) 2011 Alexander Kromm (mmaulwurff@gmail.com)
+Source code is available at GitHub: https://github.com/mmaulwurff/Eyecube
 
 Eyecube is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
