all is ready for graphics

--- a/README
+++ b/README
@@ -17,7 +17,7 @@ Or just open scr.pro file with QtCreator.
 
 Now only singleplayer is developed, multiplayer is planned.
 
-Copyright (C) 2011, 2012 Alexander Kromm (mmaulwurff@gmail.com)
+Copyright (C) 2013 Alexander Kromm (mmaulwurff@gmail.com)
 Source code is available at GitHub: https://github.com/mmaulwurff/FREG
 
 FREG is free software: you can redistribute it and/or modify
