--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+/** \mainpage
+
 FREG is a free-roaming elementary game.
 Inspired by Minecraft and Angband.
 This is a version of FREG with text graphics.
@@ -5,18 +7,23 @@ This is a version of FREG with text graphics.
 Development stage: implementing basics.
 
 Language: C++, Qt
-Non-standard libraries: ncurses
+
+Non-standard libraries: libncurses5
 
 Compile:
-qmake -project
-qmake freg-nox.pro
-make
+qmake freg-nox.pro;
+make;
+
+(do not forget include -lncurses in Makefile)
+
+Or open freg-nox with QtCreator.
 
 Development is run on GNU/Linux, but on MS Windows should work too with PDCurses ( http://pdcurses.sourceforge.net/ ).
 
 Now only singleplayer is developed, multiplayer is planned.
 
 Copyright (C) 2013 Alexander Kromm (mmaulwurff@gmail.com)
+
 Source code is available at GitHub: https://github.com/mmaulwurff/FREG
 
 FREG is free software: you can redistribute it and/or modify
@@ -31,3 +38,5 @@ GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with FREG. If not, see <http://www.gnu.org/licenses/>.
+
+*/
