--- a/README
+++ b/README
@@ -22,7 +22,7 @@ Development is run on GNU/Linux, but on MS Windows should work too with PDCurses
 
 Now only singleplayer is developed, multiplayer is planned.
 
-Copyright (C) 2013 Alexander Kromm (mmaulwurff@gmail.com)
+Copyright (C) 2013 Alexander Kromm (mmaulwurff@gmail.com) and Artjom Kunz.
 
 Source code is available at GitHub: https://github.com/mmaulwurff/FREG
 
