add google+ to readme

--- a/README
+++ b/README
@@ -35,7 +35,8 @@ Extra fun: block copy (Ctrl-v, then select, then p) and block paste (1vp).
 
 Copyright (C) 2014 Alexander Kromm (mmaulwurff@gmail.com). --------------------
 
-Source code is available at GitHub: https://github.com/mmaulwurff/FREG
+Source code is available at GitHub: https://github.com/mmaulwurff/freg
+Google+ Community: https://plus.google.com/communities/101873782136369825650
 
 FREG is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
