add vk community to readme

--- a/README
+++ b/README
@@ -37,6 +37,7 @@ Copyright (C) 2014 Alexander Kromm (mmaulwurff@gmail.com). --------------------
 
 Source code is available at GitHub: https://github.com/mmaulwurff/freg
 Google+ Community: https://plus.google.com/communities/101873782136369825650
+VK community: https://vk.com/freg_dev
 
 FREG is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
